[gd_scene load_steps=4 format=2]

[ext_resource path="res://dialogue_engine/dialogue_ui/dialogue_option/dialogue_option.gd" type="Script" id=1]
[ext_resource path="res://dialogue_engine/dialogue_ui/typing_label.gd" type="Script" id=2]
[ext_resource path="res://dialogue_engine/dialogue_ui/dialogue_option/option_button.gd" type="Script" id=3]


[node name="dummy_label" type="Label"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "This is a dialogue option."
autowrap = true
script = ExtResource( 1 )

[node name="option_text" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="option_number" type="Label" parent="option_text"]
margin_right = 12.0
margin_bottom = 800.0
size_flags_vertical = 1
text = "1."
align = 2

[node name="dialogue_option" type="RichTextLabel" parent="option_text"]
margin_left = 16.0
margin_right = 1200.0
margin_bottom = 800.0
rect_min_size = Vector2( 300, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
meta_underlined = false
text = "This is a dialogue option."
scroll_active = false
script = ExtResource( 2 )
typing_speed = 0.0
pause_on_sentence_end = 0.0
pause_on_comma = 0.0

[node name="option_button" type="Button" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -3.0
margin_bottom = 3.0
hint_tooltip = "This is a neutral dialogue option."
shortcut_in_tooltip = false
align = 0
script = ExtResource( 3 )
